--- a/SoManyBugs/Base.lproj/Main.storyboard
+++ b/SoManyBugs/Base.lproj/Main.storyboard
@@ -44,6 +44,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spider" translatesAutoresizingMaskIntoConstraints="NO" id="Dnu-40-Fmx">
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="128" id="etF-mT-Sb2"/>
                                     <constraint firstAttribute="height" constant="128" id="rF3-m5-Gns"/>
